# marktastic

./: .gitignore  CHANGELOG.md  README.md  handoff.md  index.html  package-lock.json  package.json
.github/workflows/: release.yml
context/: progress.md
src/: App.vue  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  md_to_typst.rs  pdfium_renderer.rs  templates.rs  typst_world.rs  wikilinks.rs
src-tauri/templates/: basic-report.typ  thesis-chapter.typ  university-assignment.typ
src/assets/: index.css
src/components/: EditorPane.vue  PreviewPane.vue  SplitView.vue  TemplateManager.vue  ToastContainer.vue  Toolbar.vue  WelcomeScreen.vue
src/composables/: useKeyboard.ts  usePdf.ts  usePdfRenderer.ts  useScrollSync.ts  useSvgRenderer.ts  useTemplates.ts  useTheme.ts  useToast.ts
