[package]
name = "marktastic"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "marktastic_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
pulldown-cmark = "0.13.4"
typst = "0.14.2"
typst-pdf = "0.14.2"
ureq = "2"
zune-inflate = { version = "0.2.54", default-features = false, features = ["gzip", "std"] }
comemo = "0.5.1"
time = "0.3.47"
ttf-parser = "0.25.1"
tar = "0.4.46"
typst-kit = { version = "0.14.2", features = ["embed-fonts"] }
regex = "1.12.3"
lazy_static = "1.5.0"
pdfium-render = { version = "0.8", features = ["image_latest"] }
pdfium-auto = "0.3.0"
image = { version = "0.25", default-features = false, features = ["png"] }
base64 = "0.22"
typst-svg = "0.14.2"
tokio = { version = "1", features = ["rt", "rt-multi-thread"] }
dirs = "5"

